# discord-bot-3

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
cicd/builder/: Jenkinsfile
discord-bot-3/: bedrock.py  bot.py  logger.py  main.py
